# ce-racing

./: README.md
ac-collector/: README.md  output.csv  pom.xml
ac-collector/src/main/java/: AssettoCorsaConnector.java  AssettoCorsaSocketIntoVo.java  OutputWriter.java
ac-collector/src/main/java/utils/: OperationEnum.java  ReaderUtils.java
dump-to-ce-kafka/: Cargo.toml
dump-to-ce-kafka/src/: main.rs
raw-data-processor/: go.mod  go.sum  main.go  telemetry.go
