[package]
name = "dump-to-ce-kafka"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudevents-sdk = "0.3.1"
cloudevents-sdk-rdkafka = "0.3.1"
rdkafka = { version = "^0.24", features = ["cmake-build"] }
tokio = { version = "^0.2", features = ["full"] }
serde_json = "^1.0"
futures = "^0.3"